about me update

--- a/index.html
+++ b/index.html
@@ -19,8 +19,15 @@
       <div class="about-text">
         <h2>About Me</h2>
         <p>
-          I'm a web developer passionate about building practical solutions.
-          This portfolio showcases real projects I've built to help local businesses.
+          I’ve been curious about web development since I was young, always tinkering with computers and wanting to create things. 
+		</p>
+		<p>
+		  I hold a Bachelor’s degree in Computing Science from Brazil, where I built a strong foundation in technology and programming. 
+		  Then I took a big step and moved to Ireland to learn English and continue my studies, where I completed a Higher Diploma in Computing. 
+		  While I was there, I started working on real projects that helped local businesses. 
+		</p>
+		<p>
+		  Now, I’m living in the Netherlands, still passionate about creating simple, useful websites that hopefully make people’s lives easier.
         </p>
       </div>
     </section>
